DataReplicator Applier: Storage Interface minvalid

XMLWordPrintableJSON

    • Fully Compatible
    • Repl 13 (04/22/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Storage Interface:

      • Add functions which wrap repl/minvalid.cpp stuff,
      • Mock versions
      • Tests
        • using storage engine (non-mock tests)
        • using mock for DR:initialSync

      Add correct touch points in DR:initialSync using the functions.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Crystal Horn (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: