SERVER-18038 added placeholder test for repl storage interface and test fixture for tests requiring use of ephemeral storage engine